WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310435
Logical shorthand properties with var() fail to resolve when reverted
https://bugs.webkit.org/show_bug.cgi?id=310435
Summary
Logical shorthand properties with var() fail to resolve when reverted
Antti Koivisto
Reported
2026-03-21 10:01:09 PDT
Bug in shorthand substitution code
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-21 10:01:23 PDT
<
rdar://problem/173073798
>
Antti Koivisto
Comment 2
2026-03-21 10:43:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61079
EWS
Comment 3
2026-03-22 09:35:08 PDT
Committed
309703@main
(58847a17c7fc): <
https://commits.webkit.org/309703@main
> Reviewed commits have been landed. Closing PR #61079 and removing active labels.
Antti Koivisto
Comment 4
2026-03-22 10:01:57 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58667
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug