Logical shorthand properties with var() fail to resolve when reverted https://bugs.webkit.org/show_bug.cgi?id=310435 rdar://173073798

Reviewed by Alan Baradlay.

Logical shorthand properties with var() fail to resolve when reverted, because the substitution
lookup compared physical property IDs against the parser's logical longhand IDs.

Test: imported/w3c/web-platform-tests/css/css-logical/logicalprops-with-variables-revert.html
* LayoutTests/imported/w3c/web-platform-tests/css/css-logical/logicalprops-with-variables-revert-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-logical/logicalprops-with-variables-revert.html: Added.
* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::applyProperty):

Map logical->physical before substitution.
Remove the now-unneeded recursion in direction aware property case.

* Source/WebCore/style/StyleSubstitutionResolver.cpp:
(WebCore::Style::SubstitutionResolver::substituteAndParse const):

Save and test against the cached property so we don't get tripped by logical/physical mismatch.

(WebCore::Style::SubstitutionResolver::substituteAndParseShorthand const):

Map the shorthand properties to physical for comparison.

Canonical link: https://commits.webkit.org/309703@main